# Beehive-Grafting-Gemini-Guided-Queen-Bee-Grafting-Robot

./: .env.example  .gitignore  LICENSE  README.md
ros2_ws/src/beehive_sim/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/beehive_sim/beehive_sim/: coord_transform.py  vision_core.py  vision_node.py
ros2_ws/src/beehive_sim/launch/: sim_bringup.launch.py
ros2_ws/src/beehive_sim/models/honeycomb_plane/: model.config  model.sdf
ros2_ws/src/beehive_sim/models/work_surface/: model.config  model.sdf
ros2_ws/src/beehive_sim/worlds/: beehive.sdf
ros2_ws/src/beehive_transfer/: CMakeLists.txt  package.xml
ros2_ws/src/beehive_transfer/launch/: beehive.launch.py
ros2_ws/src/beehive_transfer/src/: robot_node.cpp
scripts/: demo.sh  lib.sh  run_robot.sh  run_sim.sh  setup.sh
web/: .dockerignore  Dockerfile  SCHEMA.md  app.py  cell_detector.py  color_segment.py  gemini_analyzer.py  opencv_filter.py  opencv_prototype.py  pipeline.py  requirements.txt
web/static/: dashboard.js  index.html  style.css
